more fixes